force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/SVMXA360__CONF_AdminPage__c.object-meta.xml
<CustomObject>
    <description>Stores the Admin Configuration Pages to dynamically render the Configuration navigation.</description>
    <label>Admin Page</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Admin Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>