force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>Description of the admin page.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>