force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique name generated for the admin page.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>