force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The admin page is active if set to True.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>