force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__Parameters__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Parameters__c</fullName>
    <description>The URL parameters for the admin page link.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>JSON to send parameters for state/mode etc.</inlineHelpText>
    <label>Parameters</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>