force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__Parent__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Group section on which the admin page link will be displayed.</description>
    <inlineHelpText>Parent (Group) for the page</inlineHelpText>
    <label>Parent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Can only have parents of Type GROUP.</errorMessage>
        <filterItems>
            <field>SVMXA360__CONF_AdminPage__c.SVMXA360__Type__c</field>
            <operation>equals</operation>
            <value>GROUP</value>
        </filterItems>
        <infoMessage>Select Parent Group</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXA360__CONF_AdminPage__c</referenceTo>
    <relationshipLabel>Admin Pages</relationshipLabel>
    <relationshipName>AdminPages</relationshipName>
    <type>Lookup</type>
</CustomField>