force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__TargetDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TargetDeveloperName__c</fullName>
    <description>The target where the admin page will be redirected to. The value depends on the target type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Page/URL to launch</inlineHelpText>
    <label>Target Developer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>