force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__TargetType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TargetType__c</fullName>
    <description>The type of the target where the admin page will be redirected to.</description>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLEXI-PAGE</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>OBJECT-URL</fullName>
            </value>
            <value>
                <fullName>RECORD-URL</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>