force-app/main/default/objects/SVMXA360__CONF_AdminPage__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>To define whether it&apos;s a group header or an admin page.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROUP</fullName>
            </value>
            <value>
                <fullName>PAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>